fix: improve blog content size and spacing

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -50,7 +50,9 @@ body {
   font-weight: 700;
   font-size: var(--step-0);
 
-  transition: background-color 200ms, border-color 200ms;
+  transition:
+    background-color 200ms,
+    border-color 200ms;
 
   &:hover,
   &:focus-visible {
